gitops/apps/podinfo/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  replicas: 2
  template:
    spec:
      serviceAccountName: team-a
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.10.2 # {"$imagepolicy": "flux-system:podinfo-latest"}
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
